bad/assign_arr_elem_string_null.example_compiler_output
ERROR
[1mbad/assign_arr_elem_string_null.lat:4:21: [1;31merror: [0;1massigning to `string` from incompatible type `null`[m
	(new string[3])[1] = null;
	                   [1;32m^[m
